--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "chance": "^1.0.2",
-    "express": "^4.13.4",
-    "md5": "^2.1.0"
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "body-parser": "^1.18.3",
+    "chance": "^1.1.7",
+    "express": "^4.17.1",
+    "md5": "^2.1.0",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
